overflow Fix

--- a/frontend/src/landing_page/pricing/Brokerage.css
+++ b/frontend/src/landing_page/pricing/Brokerage.css
@@ -6,6 +6,9 @@ table,thead,th,tbody,td,tr {
 thead,tbody{
     border:1px solid rgba(0,0,0,0.2) !important
 }
+body{
+    overflow-x:hidden ;
+}
 
 th{
     font-weight:400;
